--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 pest = "2.8.0"
 pest_derive = "2.8.0"
+miette = { version = "7.6.0", features = ["fancy"] }
+thiserror = "2.0.12"
