--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ pest = "2.8.0"
 pest_derive = "2.8.0"
 miette = { version = "7.6.0", features = ["fancy"] }
 thiserror = "2.0.12"
+lazy_static = "1.4.0"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
