--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ thiserror = "2.0.12"
 lazy_static = "1.4.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+regex = "1.11.1"
