--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ lazy_static = "1.4.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 regex = "1.11.1"
+clap = { version = "4.5.38", features = ["derive"] }
